# python_project

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  copilot-instructions.md
.github/copilot-rules/: behavioral-rules.md  mcp-rules.md  memory-rating.md  memory-rules.md  methodology-rules.md  project-codification.md  project-rules.md  todo2.md  tools-rules.md
.github/workflows/: copyright-check.yml  dco-check.yml  detect-copies.yml  sonarqube-check.yml  testsprite-automation.yml
docs/: ARCHITECTURE_MAP.md  CHUNK_MARKERS_USAGE_GUIDE.md  CITATIONS_ADDED.md  COPYRIGHT_HEADERS_GUIDE.md  COPYRIGHT_PROTECTION.md  COPYRIGHT_QUICK_REFERENCE.md  GETTING_STARTED.md  GPG_SIGNING.md  LANGSMITH_SETUP.md  MIGRATION_GOOGLE.md  README.md  REORGANIZATION_SUMMARY.md  SETUP_CHECKLIST.md  TESTING_WITH_TESTSPRITE.md  TEST_REPORT_ADD_CHUNK_MARKERS.md  TROUBLESHOOT_PRECOMMIT_TLS.md  architecture.md
docs/compliance/: SONARQUBE_SETUP.md
docs/testsprite_results/: TESTSPRITE_REPORT.md
scripts/: README.md  add_chunk_markers.py  add_copyright_headers.py  benchmark_reranking.py  chat.py  generate_tree.py  migrate_imports.py  precommit_wrapper.py  recreate_faiss.py  run_sonarqube.sh  run_testsprite.sh  run_threshold_tests.py  setup-dev-environment.sh  validate_logging.py
src/core/domain/: session.py  state.py
src/core/services/: memory_manager.py  monitoring.py
src/features/conversation/: __init__.py  conversation.py  conversation_graph.py
src/features/rag/: graph_rag.py  nodes.py
src/features/reranking/: reranker.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/database/banco_faiss/: index.faiss  index.pkl
src/infrastructure/logging/: logger.py
tests/: __init__.py  conftest.py  test_add_chunk_markers.py  test_add_copyright_headers.py
tests/testsprite/: __init__.py  conftest.py  test_conversation_api.py  test_llm_generation.py  test_quality_metrics.py  test_rag_core.py
tests/unit/: test_conversation_demo.py  test_json_output.py  test_langsmith_integration.py  test_logging.py  test_reranker.py  test_reranker_integration.py  test_session_config.py  test_settings.py  test_state_types.py  test_threshold_filtering.py  test_threshold_performance.py  test_threshold_real_world_integration.py  test_threshold_statistical_validation.py
